@startuml

title __AUTONOMOUS's Class Diagram__\n

  package org.firstinspires.ftc.teamcode {
    package org.firstinspires.ftc.teamcode.autonomous {
      class AutonomousCraterNoMascot {
          ~ park()
          + runOpMode()
      }
    }
  }
  

  package org.firstinspires.ftc.teamcode {
    package org.firstinspires.ftc.teamcode.autonomous {
      class AutonomousDepotNoMascot {
          ~ park()
          + runOpMode()
      }
    }
  }
  

  package org.firstinspires.ftc.teamcode {
    package org.firstinspires.ftc.teamcode.autonomous {
      abstract class BaseAutonomous {
          {static} - MINERAL_SEARCH_TIMEOUT : long
          {static} + DISTANCE_DETACH_FROM_LANDER : int
          ~ initialize()
          ~ hitMineral()
          ~ foundGold()
          ~ detachFromLander()
          {abstract} ~ park()
          ~ lookForGold()
          ~ dropMascot()
          - foundInFirstTryPolicy()
          - foundInSecondTryPolicy()
          - foundInThirdTryPolicy()
      }
    }
  }
  

  package org.firstinspires.ftc.teamcode {
    package org.firstinspires.ftc.teamcode.autonomous {
      class DistanceTest {
          + runOpMode()
      }
    }
  }
  

  AutonomousCraterNoMascot -up-|> BaseAutonomous
  AutonomousDepotNoMascot -up-|> BaseAutonomous
  BaseAutonomous -up-|> LinearOpMode
  BaseAutonomous o-- MoveWithGyro : movementHandler
  BaseAutonomous o-- ArmsAction : armsHandler
  BaseAutonomous o-- WebcamVision : visionHandler
  DistanceTest -up-|> LinearOpMode


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
